# dmm-tools

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/ut61eplus-cli/: Cargo.toml
crates/ut61eplus-cli/src/: capture.rs  format.rs  main.rs
crates/ut61eplus-gui/: Cargo.toml
crates/ut61eplus-gui/src/: app.rs  display.rs  graph.rs  main.rs  recording.rs  settings.rs  specs.rs  stats.rs
crates/ut61eplus-lib/: Cargo.toml
crates/ut61eplus-lib/examples/: dump_specs.rs  enumerate.rs  get_name.rs  handshake.rs  read_once.rs
crates/ut61eplus-lib/src/: command.rs  cp2110.rs  error.rs  flags.rs  lib.rs  measurement.rs  mock.rs  mode.rs  protocol.rs  stats.rs  transport.rs
crates/ut61eplus-lib/src/protocol/: framing.rs  mod.rs  registry.rs
crates/ut61eplus-lib/src/protocol/ut171/: mod.rs
crates/ut61eplus-lib/src/protocol/ut181a/: mod.rs
crates/ut61eplus-lib/src/protocol/ut61eplus/: mod.rs
crates/ut61eplus-lib/src/protocol/ut61eplus/tables/: mod.rs  ut61b_plus.rs  ut61d_plus.rs  ut61e_plus.rs
crates/ut61eplus-lib/src/protocol/ut8803/: mod.rs
crates/ut61eplus-lib/src/tables/: mod.rs  ut61e_plus.rs
crates/ut61eplus-lib/tests/: golden_tests.rs
crates/ut61eplus-lib/tests/golden/ut61eplus/: dcv_5.678.json  ncv_3.json  ohm_overload.json
docs/: adding-devices.md  architecture.md  cli-reference.md  development.md  gui-reference.md  protocol.md  setup.md  supported-devices.md  ux-design.md  verification-backlog.md
docs/research/: non-unit-candidates.md
udev/: 99-cp2110-unit.rules
(+5 files in other folders)
