[package]
name = "ut61eplus-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Library for communicating with UNI-T UT61E+ multimeter via CP2110 HID bridge"

[dependencies]
hidapi = { version = "2.6", features = ["linux-static-hidraw"] }
thiserror = "2"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
